# user-profiler

./: .gitignore  CLAUDE.md  LOGGING.md  README.md  USAGE.md  check_system.sh  docker-compose.yml  frontend_migration_complete.md  run_tests.sh  start.sh  start_manual.sh  start_with_logs.sh  stop.sh  test_frontend.md  test_report.md  view_logs.sh
backend/: .env.example  pyproject.toml  requirements.txt  test_simple.py
backend/src/: config.py  main.py  models.py
backend/src/api/: main.py
backend/src/collectors/: __init__.py  base_collector.py  github_collector.py  search_collector.py  zhihu_collector.py
backend/src/extractors/: __init__.py  llm_extractor.py
backend/src/profiler/: __init__.py  user_profiler.py
backend/src/storage/: __init__.py  database.py
backend/src/utils/: logger.py
backend/tests/: test_api.py  test_collectors.py  test_profiler.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  test_frontend.js
frontend/src/: App.vue  main.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/profile/[userId]/: page.tsx
frontend/src/app/timeline/[userId]/: page.tsx
frontend/src/components/: Navigation.tsx  UserProfileCard.test.js
frontend/src/services/: api.js  api.ts
frontend/src/views/: Home.vue  Logs.vue  Profile.vue  Timeline.vue
